# ExpliCAS

./: .env  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEBUG_SYSTEM.md  ENVIRONMENT.md  IMPROVEMENTS.md  LICENSE  MAINTENANCE.md  Makefile  POLICY.md  README.md  RULES.md  STEP_QUALITY_REPORT.md  TEST_ANALYSIS_REPORT.md  ast.dot  create_release_v1_2.sh  create_release_v1_3.sh  debug_log.txt  debug_output.txt  debug_triple.txt  fix_symbol_id.sh  fix_symbolid.py  inverse_trig_rules_draft.rs  mm_modp.txt  output_precalculus_test.txt  output_solver_stress_test.txt  output_test.txt  results.txt  run_cli_tests.sh  rust_out  test_matrix_commands.sh  test_output.txt  test_output_10.txt  test_output_11.txt  test_output_12.txt  test_output_13.txt  test_output_14.txt  test_output_15.txt  (+15 more)
crates/cas_android_ffi/: Cargo.toml  README.md
crates/cas_android_ffi/kotlin/: CasNative.kt  MainActivity.kt  README.md  activity_main.xml  build.gradle.kts  item_step.xml
crates/cas_android_ffi/src/: lib.rs
crates/cas_cli/: Cargo.toml
crates/cas_cli/benches/: common.rs  frontend_cli.rs  frontend_repl_wire.rs
crates/cas_cli/src/: assumption_format.rs  cli_args.rs  completer.rs  config.rs  format.rs  health_suite.rs  json_types.rs  main.rs  repl.rs  result_format.rs  session_io.rs
crates/cas_cli/tests/: advanced_simplification.rs  asin_acos_negation_tests.rs  branch_mode_tests.rs  canonical_tests.rs  cli_contract_tests.rs  cli_json_contract_tests.rs  cli_wire_contract_tests.rs  complex_integration_tests.rs  constant_relation_solve_tests.rs  debug_inequality.rs  debug_pi_canon.rs  debug_sec_tan.rs  debug_test_47.rs  debug_undefined.rs  determinism_tests.rs  domain_cli_contract_tests.rs  equivalence_tests.rs  even_power_abs_trig_inequality_contract_tests.rs  exponential_surd_backsub_contract_tests.rs  gcd_torture_tests.rs  generalized_negation_tests.rs  hyperbolic_tests.rs  idempotence_tests.rs  inequality_tests.rs  integrate_contract_tests.rs  integration_tests.rs  inverse_relations_tests.rs  inverse_trig_hyperbolic_solve_contract_tests.rs  inverse_trig_tests.rs  inverse_trig_torture_tests.rs  irrational_slope_trig_contract_tests.rs  limit_contract_tests.rs  matrix_function_tests.rs  matrix_operations_tests.rs  mixed_base_exp_and_recip_abs_contract_tests.rs  mixed_fraction_tests.rs  mixed_trig_tests.rs  multiple_angle_trig_contract_tests.rs  nary_pattern_matching_tests.rs  negated_atan_pairs_tests.rs  (+39 more)
crates/cas_didactic/: Cargo.toml
crates/cas_didactic/benches/: frontend_didactic.rs
crates/cas_didactic/src/: eval_json_render.rs  eval_json_steps.rs  events.rs  events_tests.rs  lib.rs  runtime_bridge.rs  step_payload_render.rs  step_payloads.rs
crates/cas_didactic/tests/: cancel_factors_focus_tests.rs  combine_like_terms_focus_tests.rs  derive_didactic_audit.rs  derive_didactic_cases.csv  didactic_gate_tests.rs  didactic_step_quality_audit.rs  didactic_step_quality_cases.csv  distribute_focus_tests.rs  distribute_visual_noop_regression.rs  eval_json_steps_tests.rs  eval_step_parity_tests.rs  factor_integer_focus_tests.rs  fraction_focus_tests.rs  inverse_trig_didactic_tests.rs  latex_reversibility_test.rs  nested_fraction_focus_tests.rs  nested_fraction_narrator_contract_tests.rs  session_cache_contract_tests.rs  solve_timeline_parity_tests.rs  step_importance_tests.rs  step_wire_tests.rs  tan_triple_product_tests.rs  timeline_render_test.rs  timeline_step_filtering_test.rs  trig_sum_quotient_tests.rs
crates/cas_engine/: Cargo.toml
crates/cas_engine/benches/: common.rs  mm_gcd.rs  mm_gcd_modp.rs  profile_cache.rs  repl_end_to_end.rs  simplification_bench.rs
crates/cas_engine/examples/: collect_steps_benchmark.rs
crates/cas_engine/proptest-regressions/: numeric_property_tests.txt
crates/cas_engine/src/: api.rs  assumptions.rs  assumptions_tests.rs  auto_expand_scan.rs  best_so_far.rs  best_so_far_tests.rs  budget.rs  budget_tests.rs  build.rs  calculus_residual_support.rs  cancel_common_terms_runtime.rs  cancel_runtime.rs  canonical_forms.rs  canonical_forms_test.rs  canonicalization.rs  collect.rs  collect_by_var_support.rs  collect_focus_support.rs  collect_rule_support.rs  collect_rule_support_tests.rs  collect_tests.rs  conservative_simplify.rs  const_eval.rs  cycle_detector.rs  cycle_detector_tests.rs  cycle_events.rs  cycle_events_tests.rs  diagnostics.rs  diagnostics_tests.rs  didactic.rs  display_context.rs  domain.rs  domain_facts.rs  domain_facts_tests.rs  domain_oracle.rs  domain_oracle_tests.rs  domain_tests.rs  engine.rs  env.rs  error.rs  (+93 more)
crates/cas_engine/tests/: abs_rules_tests.rs  anti_catastrophe_tests.rs  assumption_key_contract_tests.rs  assumption_kind_display_tests.rs  assumptions_contract_tests.rs  auto_expand_contract_tests.rs  auto_factor_test.rs  budget_contract_tests.rs  cancel_factors_focus_tests.rs  canonicalization_hardening_tests.rs  collect_negation_test.rs  combine_like_terms_focus_tests.rs  complex_number_tests.rs  condition_normalization_tests.rs  conditional_flatten_tests.rs  conjugate_product_contract_tests.rs  const_fold_contract_tests.rs  context_aware_expansion_tests.rs  context_no_contamination.rs  coverage_tests.rs  cycle_defense_tests.rs  debug_idempotency.rs  depth_stress_test.rs  diagnose_stack_overflow.rs  diagnostic_cubic.rs  diagnostic_cycle_iso.rs  didactic_gate_tests.rs  distribute_focus_tests.rs  distribute_visual_noop_regression.rs  domain_assume_warnings_contract_tests.rs  domain_contract_tests.rs  domain_mode_contract_tests.rs  domain_partial_cancel_contract_tests.rs  dyadic_cos_product_tests.rs  eval_stateless_contract_tests.rs  eval_step_parity_tests.rs  expand_contract_tests.rs  expand_integration_test.rs  factor_integer_focus_tests.rs  factor_integration_test.rs  (+90 more)
crates/cas_formatter/: Cargo.toml
crates/cas_formatter/benches/: frontend_render.rs
crates/cas_formatter/src/: latex.rs  (+17 more)
crates/cas_math/: Cargo.toml
crates/cas_parser/: Cargo.toml
crates/cas_session/: Cargo.toml
crates/cas_session_core/: Cargo.toml
crates/cas_solver/: Cargo.toml
crates/cas_solver_core/: Cargo.toml
crates/cas_wasm/: Cargo.toml
(+3306 files in other folders)
