[workspace]
members = [
    "crates/cas_ast",
    "crates/cas_engine",
    "crates/cas_parser",
    "crates/cas_cli",
    "crates/cas_android_ffi",
    "crates/cas_math",
    "crates/cas_formatter",
    "crates/cas_solver",
    "crates/cas_didactic",
    "crates/cas_session",
    "crates/cas_api_models",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Javier Gimenez Moya"]
