[package]
name = "cas_android_ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Android JNI bridge for ExpliCAS engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
# JNI bindings
jni = "0.21"

# CAS engine
cas_ast = { path = "../cas_ast" }
cas_parser = { path = "../cas_parser" }
cas_engine = { path = "../cas_engine", default-features = false }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
