[package]
name = "cas_android_ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Android JNI bridge for ExpliCAS engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
# JNI bindings
jni = "0.21"

# CAS engine
cas_engine = { path = "../cas_engine", default-features = false }
cas_api_models = { path = "../cas_api_models" }

# JSON serialization
serde_json = "1.0"
