[package]
name = "cas_cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = ["parallel"]
parallel = ["cas_session/parallel"]

[dependencies]
cas_api_models = { path = "../cas_api_models" }
cas_ast = { path = "../cas_ast" }
cas_didactic = { path = "../cas_didactic", default-features = false }
cas_parser = { path = "../cas_parser" }
cas_formatter = { path = "../cas_formatter" }
cas_session = { path = "../cas_session" }
cas_solver = { path = "../cas_solver", default-features = false }
rustyline = "12.0"
num-rational = "0.4"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.7.0"
predicates = "3.0"
num-traits = "0.2"
cas_math = { path = "../cas_math" }

[[bench]]
name = "frontend_cli"
harness = false

[[bench]]
name = "frontend_repl_wire"
harness = false
