[package]
name = "cas_didactic"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cas_api_models = { path = "../cas_api_models" }
cas_ast = { path = "../cas_ast" }
cas_formatter = { path = "../cas_formatter" }
cas_math = { path = "../cas_math", default-features = false }
cas_solver = { path = "../cas_solver", default-features = false }
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"

[dev-dependencies]
cas_parser = { path = "../cas_parser" }
cas_session = { path = "../cas_session", default-features = false }
