[package]
name = "cas_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
cas_ast = { path = "../cas_ast" }
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
thiserror = "1.0"
tracing = "0.1.43"
regex = "1.12.2"
bitflags = "2"
anyhow = "1.0.100"

[dev-dependencies]
cas_parser = { path = "../cas_parser" }
cas_format = { path = "../cas_format" }
proptest = "1.9.0"
criterion = "0.7.0"
lazy_static = "1.4"

[[bench]]
name = "simplification_bench"
harness = false

[[bench]]
name = "profile_cache"
harness = false

[[bench]]
name = "repl_end_to_end"
harness = false

[[bench]]
name = "mm_gcd"
harness = false
