[package]
name = "cas_engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
cas_ast = { path = "../cas_ast" }
cas_math = { path = "../cas_math", default-features = false }
cas_parser = { path = "../cas_parser" }
cas_session = { path = "../cas_session" }
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
thiserror = "1.0"
tracing = "0.1.43"
regex = "1.12.2"
bitflags = "2"
anyhow = "1.0.100"
rustc-hash = "1.1"
smallvec = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1"
rayon = { version = "1.10", optional = true }

[features]
default = ["parallel"]
parallel = ["rayon", "cas_math/parallel"]

[dev-dependencies]
cas_parser = { path = "../cas_parser" }
proptest = "1.9.0"
criterion = "0.7.0"
lazy_static = "1.4"
insta = "1.40"
tempfile = "3"

[[bench]]
name = "simplification_bench"
harness = false

[[bench]]
name = "profile_cache"
harness = false

[[bench]]
name = "repl_end_to_end"
harness = false

# Disabled: mm_gcd benchmarks are slow and not needed for regular CI
# [[bench]]
# name = "mm_gcd"
# harness = false

# [[bench]]
# name = "mm_gcd_modp"
# harness = false
