[package]
name = "cas_formatter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cas_ast = { path = "../cas_ast" }
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
regex = "1.12.2"

[dev-dependencies]
cas_parser = { path = "../cas_parser" }
criterion = "0.7.0"

[[bench]]
name = "frontend_render"
harness = false
