[package]
name = "cas_session"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cas_ast = { path = "../cas_ast" }
cas_session_core = { path = "../cas_session_core" }
cas_engine = { path = "../cas_engine", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
num-bigint = "0.4"
num-rational = "0.4"

[dev-dependencies]
cas_formatter = { path = "../cas_formatter" }
tempfile = "3"
