[package]
name = "cas_session_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cas_ast = { path = "../cas_ast" }
serde = { version = "1.0", features = ["derive"] }
smallvec = "1"

[dev-dependencies]
cas_formatter = { path = "../cas_formatter" }
cas_parser = { path = "../cas_parser" }
