[package]
name = "cas_session_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cas_ast = { path = "../cas_ast" }
serde = { version = "1.0", features = ["derive"] }
smallvec = "1"
anyhow = "1.0.100"
num-bigint = "0.4"
num-rational = "0.4"
bincode = "1"

[dev-dependencies]
cas_parser = { path = "../cas_parser" }
tempfile = "3"
criterion = "0.7.0"

[[bench]]
name = "snapshot_io"
harness = false

[[bench]]
name = "store_lookup"
harness = false

[[bench]]
name = "resolve_frontend"
harness = false

[[bench]]
name = "snapshot_restore"
harness = false

[[bench]]
name = "snapshot_build"
harness = false

[[bench]]
name = "snapshot_store_build"
harness = false
