[package]
name = "cas_solver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["parallel"]
parallel = ["cas_engine/parallel"]

[dependencies]
cas_api_models = { path = "../cas_api_models" }
cas_ast = { path = "../cas_ast" }
cas_engine = { path = "../cas_engine", default-features = false }
cas_formatter = { path = "../cas_formatter" }
cas_parser = { path = "../cas_parser" }
cas_session = { path = "../cas_session" }
serde_json = "1.0"
