[package]
name = "cas_solver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["parallel"]
parallel = ["cas_engine/parallel"]

[dependencies]
cas_api_models = { path = "../cas_api_models" }
cas_ast = { path = "../cas_ast" }
cas_engine = { path = "../cas_engine", default-features = false }
cas_formatter = { path = "../cas_formatter" }
cas_math = { path = "../cas_math" }
cas_parser = { path = "../cas_parser" }
cas_session_core = { path = "../cas_session_core" }
cas_solver_core = { path = "../cas_solver_core" }
num-rational = "0.4"
num-traits = "0.2"
serde_json = "1.0"

[dev-dependencies]
cas_session = { path = "../cas_session", default-features = false }
insta = "1.40"
num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
proptest = "1"
