[package]
name = "cas_wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Browser (WebAssembly) entry point for the ExpliCAS engine: the same stateless JSON wire the CLI and web server speak, compiled to wasm32 so GitHub Pages can serve a fully client-side demo."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# default-features = false: the wasm build must NOT carry rayon/parallel —
# it compiles on wasm32 but would panic at runtime; the serial GCD fallback
# is the correct engine configuration for the browser.
cas_solver = { path = "../cas_solver", default-features = false }
wasm-bindgen = "0.2"
